<resources>
    <string name="app_name">DrawerNavigation</string>
    <string name="book">Book</string>
    <string name="item_return">Return</string>
    <string name="laptop">Laptop</string>
    <string name="voice">Voice</string>
    <string name="reading">Reading</string>
    <string name="read_more">Read More</string>
    <string name="chrome_reader">Chrome Reader</string>
    <string name="Comments">Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="insert_comments">Insert Comments</string>
    <string name="umair_ahmed">Umair Ahmed</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="open">Opening</string>
    <string name="close">Closing</string>
    <string name="book_activity">Book Activity</string>
</resources>